[tool.poetry]
name = "meme_bot"
version = "0.1.0"
description = ""
authors = ["Mapc <mapctrigotixd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
